--- a/app/views/buses/new.html.erb
+++ b/app/views/buses/new.html.erb
@@ -1,4 +1,11 @@
-<h1>New bus</h1>
+<div style="text-align: center;"> 
+	<h1>New Bus </h1>
+	<h5 style="color:black">Taylor Avenue, Walking to Right Side of Crosswalk</h5>
+	<h5 style="color:red">Spaces Between Crosswalks</h5>
+	<h5 style="color:green">Left Side of Crosswalk to Driveway A</h5>
+	<h5 style="color:purple">Spaces Between Both Driveways</h5>
+	<h5 style="color:blue">Taylor Avenue Buses after Driveway B</h5>
+</div>
 
 <%= render 'form' %>
 
