--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -55,13 +55,25 @@
        <p><%=raw @announcement.content %></p>
     </div>
   	<div class="row-fluid" id="events">
-  		<div class="span6">
+  		<div class="span4">
   		  <div id="upcoming">
     			<h3>Upcoming Events</h3>
           <%=raw @upcoming.content %>
   		  </div>
   		</div>
-  		<div class="span6">
+      <div class="span4">
+        
+        <% if @day.day == "a" %>
+          <h3>Today is an</h3>
+          <h1 style="text-align: center;"> A Day</h1>
+        <% elsif @day.day == "b" %>
+          <h3>Today is a</h3>
+          <h1 style="text-align: center;"> B Day</h1>
+        <% else %>
+          <h3>The day has not been set</h3>
+        <% end %>
+      </div>
+  		<div class="span4">
   		  <div id="recent">
     			<h3>Recent Events</h3>
     			<%=raw @recent.content %>
