--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -320,3 +320,7 @@ a {
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18); 
   border-radius: 5px;
 }
+
+.nav-pills > .active > a, .nav-pills > .active > a:hover {
+    background-color: #466843;
+}
