Removed link to About Site page in _footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
 					<ul>
 						<a href="http://www.vqr.mx/DmkD"><li>Bus Map</li></a>
 						<li><%= link_to "The Harbinger Team", harbingerteam_path %></li>
-						<li><%= link_to "About Site", about_path %></li>
+						<!--<li><%= link_to "About Site", about_path %></li>-->
 					</ul>
 				</div> <!-- end "important" -->
 				<div class="contact span4">
