Fixed Carousel Scaling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -324,3 +324,11 @@ a {
 .nav-pills > .active > a, .nav-pills > .active > a:hover {
     background-color: #466843;
 }
+
+.CarouselImg img {
+  width: 100%;
+  height: 338px;
+  max-height: 338px;
+  margin: 0 auto;
+}
+
