chaned day to aorb in database

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,10 +63,10 @@
   		</div>
       <div class="span4">
         
-        <% if @day.day == "a" %>
+        <% if @day.aorb == "a" %>
           <h3>Today is an</h3>
           <h1 style="text-align: center;"> A Day</h1>
-        <% elsif @day.day == "b" %>
+        <% elsif @day.aorb == "b" %>
           <h3>Today is a</h3>
           <h1 style="text-align: center;"> B Day</h1>
         <% else %>
