If statements in builder for easy modification of markup for HF Navigator

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -69,7 +69,7 @@
         <% elsif @day.aorb == "B" %>
           <h3>Today is a</h3>
           <h1 style="text-align: center;"> B Day</h1>
-        <% elsif @day.aorb == "There is No School Today" %>
+        <% elsif @day.aorb == "none" %>
           <h3>There is no school today</h3>
         <% end %>
       </div>
