Changed " Product Reviews" to "Reviews"

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -33,7 +33,7 @@ $(function() {
 	<div class="span2"> <!--Space for categories sidebar-->
 		<ul class="nav nav-pills nav-stacked">
 			<li class="active"><a href="#all" data-toggle="tab">All Articles</a></li>
-			<li><a href="#reviews" data-toggle="tab"> Product Reviews</a></li>
+			<li><a href="#reviews" data-toggle="tab">Reviews</a></li>
 			<li><a href="#sports" data-toggle="tab">Sport News</a></li>
 			<li><a href="#clubs" data-toggle="tab">Club News</a></li>
 		</ul>
