--- a/app/views/buses/map.html.erb
+++ b/app/views/buses/map.html.erb
@@ -147,8 +147,14 @@
 
 
 <div id="wrapper">
+  <% if @bus.outofservice == true %>
+      <h1>The Bus Map is out of service</h1>
+      <h3 style="text-align: center;">Sorry for the inconvenience</h3>
+      <h3 style="text-align: center;">Please check back later</h3>
+  <% else %>
   <h1>Bus Map for <%= @created %></h1>
     <h4 style="text-align:center;">Last updated at: <%= @updated %></h4>
+
 
   <div id="map">
     <div class="bus bus-right" id="one"><%= @bus.one %></div>
@@ -176,6 +182,6 @@
   </div>
   <p style="text-align: center; color: gold; font-size:20px;">Buses Located on the <strong>RIGHT</strong> of the Main Entrance:<%= @bus.one %>,<%= @bus.two %>,<%= @bus.three %>,<%= @bus.four %>,<%= @bus.five %>,<%= @bus.six %>,<%= @bus.seven %>,<%= @bus.eight %>,<%= @bus.nine %>,<%= @bus.ten %>,<%= @bus.eleven %>,<%= @bus.twelve %>,</p>
   <p style="text-align: center; color: green; font-size:20px;">Buses Located on the <strong>LEFT</strong> of the Main Entrance:<%= @bus.thirteen %>,<%= @bus.fourteen %>,<%= @bus.fifteen %>,<%= @bus.sixteen %>,<%= @bus.seventeen %>,<%= @bus.eighteen %>,<%= @bus.nineteen %>,<%= @bus.twenty %>
-  
+  <% end %>
 </div>
     
