--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -80,6 +80,7 @@ $(function() {
 						    </h2>
 						    <h4>By <%= article.author %><div style="text-align: right;">Published <%= article.created_at.strftime('%B %d, %Y')%></div></h4>
 						      <%=raw article.body %>
+						      <%= image_tag article.image.url %>
 						</div>
 					
 				<% end %>
@@ -95,6 +96,7 @@ $(function() {
 						    </h2>
 						    <h4>By <%= article.author %><div style="text-align: right;">Published <%= article.created_at.strftime('%B %d, %Y')%></div></h4>
 						      <%=raw article.body %>
+						      <%= image_tag article.image.url %>
 						</div>
 					
 				<% end %>
@@ -114,7 +116,7 @@ $(function() {
 						<% @paginated_print_issues.each do |issue| %>
 							<tr>
 							<td><%= issue.pubdate.strftime('%B %d, %Y') %></td>
-							<td><a href="<%= issue.link %>"><%= issue.title %></a></td>
+							<td><a href="<%= issue.pdf.url %>"><%= issue.title %></a></td>
 							<td><%= issue.description %></td>
 							</tr>
 						<% end %>
