--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,32 +51,35 @@
       <h3><a href="https://sites.google.com/site/harborfieldshs/">Today's Announcements</a></h3>
        <p><%=raw @announcement.content %></p>
     </div>
-  	<div class="row-fluid" id="events">
-  		<div class="span4">
-  		  <div id="upcoming">
-    			<h3>Upcoming Events</h3>
+    <div class="row-fluid" id="events">
+      <div class="span4">
+        <div id="upcoming">
+          <h3>Upcoming Events</h3>
           <%=raw @upcoming.content %>
-  		  </div>
-  		</div>
+        </div>
+      </div>
       <div class="span4">
         
-        <% if @day.aorb == "A" %>
-          <h3>Today is an</h3>
-          <h1 style="text-align: center;"> A Day</h1>
-        <% elsif @day.aorb == "B" %>
-          <h3>Today is a</h3>
-          <h1 style="text-align: center;"> B Day</h1>
-        <% elsif @day.aorb == "none" %>
-          <h3>There is no school today</h3>
-        <% end %>
+          <h5 style="text-align: center;"><a href="https://hscsd.follettdestiny.com/common/servlet/presenthomeform.do;jsessionid=A8BAFF7F91F8B4A46FE4463A6642DAD9?l2m=Home&tm=Home&l2m=Home">Click here for the HHS library's Destiny Quest database</a></h5>
+        
+          <% if @day.aorb == "A" %>
+            <h3>Today is an</h3>
+            <h1 style="text-align: center;"> A Day</h1>
+          <% elsif @day.aorb == "B" %>
+            <h3>Today is a</h3>
+            <h1 style="text-align: center;"> B Day</h1>
+          <% elsif @day.aorb == "none" %>
+            <h3>There is no school today</h3>
+          <% end %>
+        
       </div>
-  		<div class="span4">
-  		  <div id="recent">
-    			<h3>Recent Events</h3>
-    			<%=raw @recent.content %>
-  		  </div>
-  		</div>
-  	</div>
+      <div class="span4">
+        <div id="recent">
+          <h3>Recent Events</h3>
+          <%=raw @recent.content %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
