--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
             <li id="nav_news"><%= link_to "News" , articles_path %> </li>
   					<li id="nav_sports"><%= link_to "Sports", sports_path %></li>
   					<li id="nav_clubs"><%= link_to "Clubs", clubs_path %></li>
-            <li id="nav_stream"><%= link_to "Livestreams", livestreams_path %></li>
+            <li id="nav_video"><%= link_to "Videos", livestreams_path %></li>
 
   				</ul>
   				<ul class="nav pull-right visible-desktop">
