--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,16 @@
   					<li id="nav_sports"><%= link_to "Sports", sports_path %></li>
   					<li id="nav_clubs"><%= link_to "Clubs", clubs_path %></li>
             <li id="nav_video"><%= link_to "Videos", livestreams_path %></li>
+            <div class="visible-phone">
+            <% if signed_in? %>
+              <% if current_user.superuser = true %>
+                      <div class="nav"><li><%= link_to "Manage Bus Map", "/buses" %></li></div>
+              <% end %>
+              <div class="nav"><li><%= link_to "Sign Out", destroy_user_session_path %></li></div>
+              <% else %>
+                <div class="nav"><li><%= link_to "Sign In", login_path %></li></div>
+            <% end -%>
+            </div>
 
   				</ul>
   				<ul class="nav pull-right visible-desktop">
@@ -36,6 +46,9 @@
                 <div id="afterFavs">
                   <!-- This is where the JQuery deletes to. It will fill the space between "before" and "after" with favorites, assuming the user has favorites. -->
                 </div>
+                <% if current_user.superuser = true %>
+                    <li><%= link_to "Manage Bus Map", "/buses" %></li>
+                <% end %>
   						  <% if can? :manage, :all %>
                   <li><%= link_to "Admin Interface", "/admin" %></li>
                 <% else %>
@@ -51,6 +64,7 @@
                   <% if can? :manage, Bus %>
                     <li><%= link_to "Manage Bus Map", "/buses" %></li>
                   <% end %>
+
                   <% if can? :manage, Memo %>
                     <li><%= link_to "Edit Memos", "/admin/memo" %></li>
                   <% end %>
