New library link

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -60,7 +60,7 @@
       </div>
       <div class="span4">
         
-          <h5 style="text-align: center;"><a href="https://hscsd.follettdestiny.com/common/servlet/presenthomeform.do;jsessionid=A8BAFF7F91F8B4A46FE4463A6642DAD9?l2m=Home&tm=Home&l2m=Home">Click here for the HHS library's Destiny Quest database</a></h5>
+          <h5 style="text-align: center;"><a href="http://harborfieldscsd.net/hhslibrary/LMC%20Webpage/index.htm">Click here for the HHS library website</a></h5>
         
           <% if @day.aorb == "A" %>
             <h3>Today is an</h3>
