class set to active

--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -60,7 +60,7 @@
 					</div>
 					<% end %>
 				</div>
-				<div class="tab-pane spring" id="spring">
+				<div class="tab-pane active" id="spring">
 					<% @spring.each do |sport| %>
 					<div class="sport" style="background-image: url( <%= image_path sport.banner.url(:full) %> );">
 						<div class="inner">
