--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
   				<ul class="nav">
   					<li id="nav_home"><%= link_to "Home", root_path %></li>
             <li id="nav_news"><%= link_to "News" , articles_path %> </li>
+            <li id="nav_classes"><%= link_to "Classes", classes_path %> </li>
   					<li id="nav_sports"><%= link_to "Sports", sports_path %></li>
   					<li id="nav_clubs"><%= link_to "Clubs", clubs_path %></li>
             <li id="nav_video"><%= link_to "Videos", livestreams_path %></li>
